<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="totalStringFormat"
            type="String" />
        <variable
            name="user"
            type="com.nvc.orderfood.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@id/btn_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="?attr/actionBarItemBackground"
                android:src="@drawable/ic_arrow_back_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/checkout"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/shipment_details"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/layout_shipment_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="2dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintEnd_toEndOf="@id/btn_change"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{user.nameUser}"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{user.addressUser}"
                                android:textSize="14sp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{user.phoneUser}"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/btn_change"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/change"
                            android:textColor="@color/orange"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_marginVertical="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg_cart" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_of_foods"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="10dp"
                    android:id="@+id/rcvListFoodOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_marginVertical="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg_cart" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_summary"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/layout_total_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="2dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp">

                        <TextView
                            android:id="@+id/title_sub_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sub_total"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/title_fee_and_delivery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fee_and_delivery"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/title_sub_total" />

                        <TextView
                            android:id="@+id/sub_total"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@{totalStringFormat+` VND`}"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/title_sub_total"
                            app:layout_constraintTop_toTopOf="@id/title_sub_total"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:id="@+id/fee_and_delivery"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/_0_vnd"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/title_fee_and_delivery"
                            app:layout_constraintTop_toTopOf="@id/title_fee_and_delivery"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:id="@+id/title_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/total_price"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/title_fee_and_delivery" />

                        <TextView
                            android:id="@+id/total"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@{totalStringFormat+` VND`}"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/title_total"
                            app:layout_constraintTop_toTopOf="@id/title_total" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_marginTop="15dp"
                    app:cardElevation="1dp"
                    android:layout_marginBottom="15dp"
                    app:cardCornerRadius="24dp"
                    app:cardBackgroundColor="@color/orange"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/btn_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:padding="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pay" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>